--- a/template/package.json
+++ b/template/package.json
@@ -86,7 +86,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-step-indicator": "^1.0.3",
-    "react-native-svg": "^12.1.1",
+    "react-native-svg": "12.1.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-touch-id": "^4.4.1",
     "react-native-vector-icons": "^9.1.0",
