--- a/template/package.json
+++ b/template/package.json
@@ -125,6 +125,7 @@
     "eslint-plugin-react": "7.23.2",
     "eslint-plugin-unused-imports": "^1.1.2",
     "jest": "^26.6.3",
+    "lefthook": "^1.1.2",
     "metro-react-native-babel-preset": "^0.70.3",
     "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "18.0.0",
