--- a/template/package.json
+++ b/template/package.json
@@ -106,6 +106,7 @@
     "@babel/runtime": "^7.12.5",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@evilmartians/lefthook": "^1.1.2",
     "@react-native-community/eslint-config": "^2.0.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
@@ -125,7 +126,6 @@
     "eslint-plugin-react": "7.23.2",
     "eslint-plugin-unused-imports": "^1.1.2",
     "jest": "^26.6.3",
-    "lefthook": "^1.1.2",
     "metro-react-native-babel-preset": "^0.70.3",
     "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "18.0.0",
