--- a/template/package.json
+++ b/template/package.json
@@ -18,12 +18,12 @@
     "aab": "cd android && ./gradlew clean && ./gradlew bundleRelease && cd ..",
     "pod": "cd ios && pod install && cd ..",
     "test": "jest",
-    "eslint": "eslint --max-warnings=0 . && prettier --check .",
-    "eslint-fix": "eslint --fix . && prettier --write .",
+    "eslint-check": "eslint --max-warnings=50 .",
+    "eslint-fix": "eslint --fix .",
     "check-types": "npx tsc --noemit",
-    "lint": "yarn eslint-fix && yarn eslint && yarn check-types",
-    "update-ios": "appcenter codepush release-react -a ACS-SHINHAN/Paperless-iOS -d Staging -m -t",
-    "update-android": "appcenter codepush release-react -a ACS-SHINHAN/Paperless-Android -d Staging -m -t"
+    "eslint-lint": "yarn eslint-fix && yarn eslint-check && yarn check-types",
+    "update-ios": "appcenter codepush release-react -a ORGANIZATION/App-iOS -d Staging -m -t",
+    "update-android": "appcenter codepush release-react -a ORGANIZATION/App-Android -d Staging -m -t"
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.1.5",
