commit fix template

--- a/template/package.json
+++ b/template/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "TemplateApp",
+  "name": "templateapp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "postinstall": "husky install",
+    "prepare": "husky install",
     "android": "npx react-native run-android",
     "ios": "npx react-native run-ios",
     "ios-staging-mac": "ENVFILE=.staging.env npx react-native run-ios",
@@ -62,7 +64,6 @@
     "react-native-app-link": "^1.0.1",
     "react-native-calendars": "^1.1280.0",
     "react-native-cardview": "^2.0.5",
-    "react-native-charts-wrapper": "^0.5.8",
     "react-native-code-push": "^7.0.4",
     "react-native-config": "^1.4.6",
     "react-native-confirmation-code-field": "^7.3.0",
@@ -106,7 +107,6 @@
     "@babel/runtime": "^7.12.5",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
-    "@evilmartians/lefthook": "^1.1.2",
     "@react-native-community/eslint-config": "^2.0.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
@@ -125,6 +125,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "7.23.2",
     "eslint-plugin-unused-imports": "^1.1.2",
+    "husky": "^8.0.1",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
     "react-native-svg-transformer": "^1.0.0",
