--- a/template/package.json
+++ b/template/package.json
@@ -57,9 +57,9 @@
     "md5": "^2.3.0",
     "native-base": "^3.3.7",
     "qs": "^6.10.3",
-    "react": "18.0.0",
+    "react": "^18.0.0",
     "react-i18next": "^11.15.7",
-    "react-native": "0.69.4",
+    "react-native": "^0.69.4",
     "react-native-animatable": "^1.3.3",
     "react-native-app-link": "^1.0.1",
     "react-native-calendars": "^1.1280.0",
